force-app/main/default/objects/InvoiceLineItem__c/fields/Monthly_Report__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monthly Report</label>
    <referenceTo>Monthly_Report__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>