force-app/main/default/objects/InvoiceLineItem__c/fields/Total_DAU__c.field-meta.xml
<CustomField>
    <fullName>Total_DAU__c</fullName>
    <label>Total DAU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>